crates/cribo/tests/snapshots/bundled_code@importlib_preserved_dotted.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_preserved_dotted/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('pkg', '_cribo_init___cribo_95bf5f_pkg', 'pkg', True)
_cribo_finder.register('pkg.sub', '_cribo_init___cribo_fd3e12_pkg_sub', 'pkg_sub', False)
pkg = _cribo.types.SimpleNamespace(__name__='pkg', __initializing__=False, __initialized__=False, __path__=[])
_cribo_finder.bind('pkg', pkg)
def _cribo_init___cribo_95bf5f_pkg(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'pkg'
    print("pkg package initialized")
    PACKAGE_FLAG = "pkg-init"
    self.PACKAGE_FLAG = PACKAGE_FLAG
    self.__initialized__ = True
    self.__initializing__ = False
    return self
pkg.__init__ = _cribo_init___cribo_95bf5f_pkg
pkg_sub = _cribo.types.SimpleNamespace(__name__='pkg.sub', __initializing__=False, __initialized__=False)
_cribo_finder.bind('pkg.sub', pkg_sub)
def _cribo_init___cribo_fd3e12_pkg_sub(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'pkg'
    print("pkg.sub initialized")
    VALUE = "sub value"
    self.VALUE = VALUE

    def parent_flag():
        __cribo_init_result = _cribo_init___cribo_95bf5f_pkg(pkg)
        for attr in dir(__cribo_init_result):
            if not attr.startswith('_'):
                setattr(pkg, attr, getattr(__cribo_init_result, attr))
        return pkg.PACKAGE_FLAG
    parent_flag.__module__ = 'pkg.sub'
    parent_flag.__qualname__ = 'parent_flag'
    self.parent_flag = parent_flag
    self.__initialized__ = True
    self.__initializing__ = False
    return self
pkg_sub.__init__ = _cribo_init___cribo_fd3e12_pkg_sub
pkg.sub = pkg_sub
'''Dotted preserved import_module targets initialize parents via the machinery.\n\nImporting "pkg.sub" must run pkg/__init__.py first, exactly like Python.\n'''
importlib = _cribo.importlib
def load(**options):
    return importlib.import_module("pkg.sub", **options)
print("before load")
module = load()
print("VALUE:", module.VALUE)
print("PARENT:", module.parent_flag())
sub = pkg.sub
